--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,12 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <uses-feature android:name="android.hardware.camera" android:required="true" />
     <uses-feature android:name="android.hardware.camera.autofocus"/>
-
 
     <application
         android:allowBackup="true"
@@ -39,6 +42,18 @@
         </activity>
 
         <activity android:name=".CameraActivity" />
+
+        <activity
+            android:name=".bluetooth.MainActivityBluetooth"
+            android:label="Main Activity Bluetooth"></activity>
+        <activity
+            android:name=".bluetooth.PairedDevices"
+            android:label="Paired Devices"
+            android:parentActivityName=".bluetooth.MainActivityBluetooth"></activity>
+        <activity
+            android:name=".bluetooth.DiscoveredDevices"
+            android:label="Discovered Devices"
+            android:parentActivityName=".bluetooth.MainActivityBluetooth"></activity>
 
 
 
